# ghc-make-deps

./: .gitignore  Makefile  README.md  ghc-deps.hs  ghc-make-deps.cabal  make-deps.hs
src/: MakeDeps.hs
src/MakeDeps/: MakeFile.hs
src/MakeDeps/MakeFile/: JSON.hs
