cabal-version:   3.8
name:            ghc-make-deps
version:         0.1.0.0
license:         BSD-3-Clause
author:          Andrea Bedini
maintainer:      andrea@andreabedini.com
build-type:      Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        MakeDeps
        MakeDeps.MakeFile
        MakeDeps.MakeFile.JSON

    other-extensions:
        LambdaCase NamedFieldPuns DeriveGeneric DerivingVia
        GeneralizedNewtypeDeriving PatternSynonyms RecordWildCards

    build-depends:
        base ^>=4.21.0.0,
        directory ^>=1.3.9.0,
        ghc ^>= 9.12,
        filepath ^>=1.5.4.0,
        containers ^>=0.7,
        os-string ^>=2.0.7

    hs-source-dirs:   src
    default-language: GHC2021

